# todo

./: README.md
todo-be/: package.json  pnpm-lock.yaml
todo-be/src/: app.module.ts  main.ts
todo-be/src/todos/: todos.controller.ts  todos.module.ts  todos.service.ts
todo-be/src/todos/dto/: create-todo.dto.ts  update-todo.dto.ts
todo-be/src/todos/models/: todo.model.ts
todo-be/src/todos/schemas/: todo.schema.ts
todo-menubar/: package.json
todo-menubar/src/: App.tsx  main.tsx
todo-menubar/src-tauri/: Cargo.toml  tauri.conf.json
todo-menubar/src-tauri/capabilities/: default.json
todo-menubar/src-tauri/src/: command.rs  fns.rs  main.rs  tray.rs
todo-menubar/src/api/: todos.ts
todo-menubar/src/hubs/: todo.ts
todo-menubar/src/tray/: config.ts  index.ts
todo-raycast/: .gitignore  package.json  pnpm-lock.yaml
todo-raycast/src/: index.tsx  types.ts
